--- a/main.html
+++ b/main.html
@@ -10,7 +10,27 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<table>
+           <thead>
+             <tr>
+				 <th> name</th>
+				 <th> roll number</th>
+			 </tr>
+		   </thead>
+		 <tbody>
 
+			 <tr>
+              <td> prateek</td>
+				 <td> 123456</td>
+			 </tr>
+			  <tr>
+              <td> sharma</td>
+				 <td> 654321</td>
+			 </tr>
+		 </tbody>
+
+		 
+	  </table>
 </body>
 
 </html>
